--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import Unitscommercial from "@components/units-commercial-equipment-same-day.ast
 import CostanchorIndex from "@components/price-list/components_dryer-repair-cost-index.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
+
+
 import "css/service/style_services.css";
 import "css/style-index.css";
 const description = "Need Same Day appliance repair? We provide fast and reliable service. We are licensed and warrantied. Don't wait! Call: (424) 325-0520";
@@ -548,3 +551,4 @@ const title ="Same Day Appliance Repair - Guaranteed Results! Call Now!";
     <Btn />
   </main>
 <Cta />
+<LogoBrands />
