--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -302,7 +302,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
           <div class="content__page-full-logo-brand">
             <div class="ph-logo-brand">
               <div class="logo-brand logo-bran-ph-1">
-                <a href="#">
+                <a href="/brands/whirlpool/whirlpool-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -314,7 +314,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-2">
-                <a href="/price-list/lg-dryer-repair-cost/">
+                <a href="/brands/lg/lg-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -325,20 +325,8 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
                 </a>
               </div>
 
-              <div class="logo-brand logo-bran-ph-4">
-                <a href="#">
-                  <img
-                    width="300px"
-                    height="300px"
-                    src="/brand-logos/samsung.webp"
-                    alt="Samsung"
-                    loading="lazy"
-                  />
-                </a>
-              </div>
-
               <div class="logo-brand logo-bran-ph-3">
-                <a href="#">
+                <a href="/brands/ge/ge-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -349,8 +337,21 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
                 </a>
               </div>
 
+              <div class="logo-brand logo-bran-ph-4">
+                <a href="/brands/samsung/samsung-dryer-repair/">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/samsung.webp"
+                    alt="Samsung"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+              
+
               <div class="logo-brand logo-bran-ph-5">
-                <a href="#">
+                <a href="/brands/maytag/maytag-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -362,7 +363,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-6">
-                <a href="#">
+                <a href="/brands/bosch/bosch-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -374,7 +375,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-7">
-                <a href="#">
+                <a href="/brands/frigidaire/frigidaire-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -386,7 +387,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-8">
-                <a href="#">
+                <a href="/brands/kenmore/kenmore-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -398,7 +399,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-9">
-                <a href="#">
+                <a href="/brands/electrolux/electrolux-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -410,7 +411,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-10">
-                <a href="#">
+                <a href="/brands/amana/amana-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -422,7 +423,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-11">
-                <a href="#">
+                <a href="/brands/hotpoint/hotpoint-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -434,7 +435,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-12">
-                <a href="#">
+                <a href="/brands/kitchenaid/kitchenaid-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -446,7 +447,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-13">
-                <a href="#">
+                <a href="/brands/jennair/jennair-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -458,7 +459,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-14">
-                <a href="#">
+                <a href="/brands/haier/haier-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -470,7 +471,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-15">
-                <a href="#">
+                <a href="/brands/asko/asko-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -482,7 +483,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-16">
-                <a href="#">
+                <a href="/brands/miele/miele-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -493,8 +494,8 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
                 </a>
               </div>
   
-              <div class="logo-brand logo-bran-ph-22">
-                <a href="#">
+              <div class="logo-brand logo-bran-ph-17">
+                <a href="/brands/fisher-paykel/fisher-paykel-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -505,8 +506,8 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
                 </a>
               </div>   
 
-              <div class="logo-brand logo-bran-ph-24">
-                <a href="#">
+              <div class="logo-brand logo-bran-ph-18">
+                <a href="/brands/speed-queen/speed-queen-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -517,8 +518,8 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
                 </a>
               </div>
 
-              <div class="logo-brand logo-bran-ph-25">
-                <a href="#">
+              <div class="logo-brand logo-bran-ph-19">
+                <a href="/brands/roper/roper-dryer-repair/">
                   <img
                     width="300px"
                     height="300px"
@@ -534,79 +535,80 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               <p>Brands of Dryer we repair</p>
 
               <div class="desc-logo-brand logo-bran-d-1">
-                <h3><a href="#">Whirlpool Dryer Repair</a></h3>
+                <h3><a href="/brands/whirlpool/whirlpool-dryer-repair/">Whirlpool Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-2">
-                <h3><a href="/price-list/lg-dryer-repair-cost/">LG Electronics Dryer Repair</a></h3>
+                <h3><a href="/brands/lg/lg-dryer-repair/">LG Electronics Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-3">
-                <h3><a href="#">Samsung Dryer Repair</a></h3>
+                <h3><a href="/brands/ge/ge-dryer-repair/">General Electric Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-4">
-                <h3><a href="#">General Electric Dryer Repair</a></h3>
+                <h3><a href="/brands/samsung/samsung-dryer-repair/">Samsung Dryer Repair</a></h3>
               </div>
 
+
               <div class="desc-logo-brand logo-bran-d-5">
-                <h3><a href="#">Maytag</a></h3>
+                <h3><a href="/brands/maytag/maytag-dryer-repair/">Maytag</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-6">
-                <h3><a href="#">Bosch Dryer Repair</a></h3>
+                <h3><a href="/brands/bosch/bosch-dryer-repair/">Bosch Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-7">
-                <h3><a href="#">Frigidaire Dryer Repair</a></h3>
+                <h3><a href="/brands/frigidaire/frigidaire-dryer-repair/">Frigidaire Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-8">
-                <h3><a href="#">Kenmore Dryer Repair</a></h3>
+                <h3><a href="/brands/kenmore/kenmore-dryer-repair/">Kenmore Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-9">
-                <h3><a href="#">Electrolux Dryer Repair</a></h3>
+                <h3><a href="/brands/electrolux/electrolux-dryer-repair/">Electrolux Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-10">
-                <h3><a href="#">Amana Dryer Repair</a></h3>
+                <h3><a href="/brands/amana/amana-dryer-repair/">Amana Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-11">
-                <h3><a href="#">Hotpoint Dryer Repair</a></h3>
+                <h3><a href="/brands/hotpoint/hotpoint-dryer-repair/">Hotpoint Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-12">
-                <h3><a href="#">KitchenAid Dryer Repair</a></h3>
+                <h3><a href="/brands/kitchenaid/kitchenaid-dryer-repair/">KitchenAid Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-13">
-                <h3><a href="#">JennAir Dryer Repair</a></h3>
+                <h3><a href="/brands/jennair/jennair-dryer-repair/">JennAir Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-14">
-                <h3><a href="#">Haier Dryer Repair</a></h3>
+                <h3><a href="/brands/haier/haier-dryer-repair/">Haier Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-15">
-                <h3><a href="#">Asko Dryer Repair</a></h3>
+                <h3><a href="/brands/asko/asko-dryer-repair/">Asko Dryer Repair</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-16">
-                <h3><a href="#">Miele Dryer Repair</a></h3>
+                <h3><a href="/brands/miele/miele-dryer-repair/">Miele Dryer Repair</a></h3>
               </div>
 
-              <div class="desc-logo-brand logo-bran-d-22">
-                <h3><a href="#">Fisher & Paykel Dryer Repair</a></h3>
+              <div class="desc-logo-brand logo-bran-d-17">
+                <h3><a href="/brands/fisher-paykel/fisher-paykel-dryer-repair/">Fisher & Paykel Dryer Repair</a></h3>
               </div>
 
-              <div class="desc-logo-brand logo-bran-d-24">
-                <h3><a href="#">Speed Queen Dryer Repair</a></h3>
+              <div class="desc-logo-brand logo-bran-d-18">
+                <h3><a href="/brands/speed-queen/speed-queen-dryer-repair/">Speed Queen Dryer Repair</a></h3>
               </div>
 
-              <div class="desc-logo-brand logo-bran-d-25">
-                <h3><a href="#">Roper Dryer Repair</a></h3>
+              <div class="desc-logo-brand logo-bran-d-19">
+                <h3><a href="/brands/roper/roper-dryer-repair/">Roper Dryer Repair</a></h3>
               </div>
             </div>
           </div>
