--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -180,7 +180,7 @@ import "@components/css-components/footer-cta.css";
       </div>
       <div class="address-footer">
         <div class="desc_address-footer">
-          <h4 style="color:#ffffff;"><b>Pasadena, CA Location</b></h4>
+          <h4 style="color:#ffffff;"><b>West Hollywood, CA Location</b></h4>
           <div class="content_address-footer">
             <svg
               width="30px"
@@ -192,7 +192,7 @@ import "@components/css-components/footer-cta.css";
                 d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.35 11.76a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 10a8 8 0 0 0-8-8zm0 17.65c-2.13-2-6-6.31-6-9.65a6 6 0 0 1 12 0c0 3.34-3.87 7.66-6 9.65zM12 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
               ></path></svg
             >
-            <p>301 N Lake Ave Suit 600, <wbr /> Pasadena, CA, 91101</p>
+            <p>8746 Rangely Ave, <wbr /> West Hollywood, CA, 90048</p>
           </div>
 
           <div class="content_address-footer">
