--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,13 +51,13 @@ const resolvedImageWithDomain = new URL(
         "name": "Same Day Appliance Repair",
         "image": "https://samedayappliance.repair/images/same-day-appliance-repair-experts.webp",
         "url": "https://samedayappliance.repair/",
-        "telephone": "+14243250520",
+        "telephone": "+13238704790",
         "priceRange": "$$",
         "hasMap": "https://maps.app.goo.gl/o1PTfsdJeiBPjdu38",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "8748 1/2 Rangely Ave",
-          "addressLocality": "Los Angeles",
+          "streetAddress": "8746 Rangely Ave",
+          "addressLocality": "West Hollywood",
           "addressRegion": "CA",
           "postalCode": "90048",
           "addressCountry": "US"
