--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -11,6 +11,7 @@ import Faqs from "@components/js/faqs.astro";
 import ContactForm from "@components/contact-form.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import "css/service/style_services.css";
+import Areas from "@components/areas.astro";
 
 const description = "Fast & reliable same day refrigerator repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0520";
 const title ="Same Day Refrigerator Repair Los Angeles - Fast & Reliable";
