--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -216,27 +216,17 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
         <Btn />
       </div>
 
-      <div class="page213-content" id="areas">
-        <div class="content__page-full-hed">
-          <div class="content__page-hed-h"><h2><strong>Freezer Repair for Various Service Areas</strong></h2></div>
-          <div class="content__page-desc">
-            <p style="text-align: start">We proudly offer same-day <strong>repair service</strong> for refrigerators and freezers across <strong>Los Angeles</strong> and nearby areas, including:</p>
-          </div>
-        </div>
-        <Btn />
-      </div>
-
       <div class="page213-content" id="expert-services">
         <div class="content__page-full-hed">
           <div class="content__page-hed-h"><h2><strong>Contact Us Today for Household Refrigerator and Freezer Repair</strong></h2></div>
           <div class="content__page-desc">
-            <p>For expert <strong>refrigerator </strong>and <strong>freezer repair</strong> in <strong>Los Angeles</strong>...</p>
+            <p style="text-align: start">For expert <strong>refrigerator </strong>and <strong>freezer repair</strong> in <strong>Los Angeles</strong>, trust Same Day Appliance Repair for quick, reliable service. Whether a minor fix or a complex overhaul, our skilled technicians are equipped to handle the job with care and precision. <strong>Schedule</strong> your service appointment with us today to keep your <strong>appliances</strong> running efficiently.</p>
           </div>
         </div>
         <Btn />
       </div>
 
-      <div class="page213-content"  id="left-menu-4">
+      <div class="page213-content"  id="brands">
         <div class="content__page-full-hed">
           <div class="content__page-hed-h">
             <h2>Brands of Home Freezers We Repair</h2>
@@ -554,6 +544,17 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
               <h3><a href="#">Whynter</a></h3>
             </div>
           </div>
+        </div>
+
+        <div class="page213-content" id="areas">
+          <div class="content__page-full-hed">
+            <div class="content__page-hed-h"><h2><strong>Freezer Repair for Various Service Areas</strong></h2></div>
+            <div class="content__page-desc">
+              <p style="text-align: start">We proudly offer same-day <strong>repair service</strong> for refrigerators and freezers across <strong>Los Angeles</strong> and nearby areas, including:</p>
+            </div>
+            <Areas />
+          </div>
+          <Btn />
         </div>
 
     <div class="page213-content" id="faqs">
