--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -552,7 +552,9 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
             <div class="content__page-desc">
               <p style="text-align: start">We proudly offer same-day <strong>repair service</strong> for refrigerators and freezers across <strong>Los Angeles</strong> and nearby areas, including:</p>
             </div>
-            <Areas />
+            <div class="content__page-desc">
+              <Areas />
+            </div>
           </div>
           <Btn />
         </div>
