--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -6,12 +6,13 @@ import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Arrow from "@components/js/arrow-phone.astro";
+import Areas from "@components/areas.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
-import ContactForm from "@components/contact-form.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
+
 import "css/service/style_services.css";
-import Areas from "@components/areas.astro";
 
 const description = "Fast & reliable same day refrigerator repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0520";
 const title ="Same Day Refrigerator Repair Los Angeles - Fast & Reliable";
@@ -219,6 +220,9 @@ const title ="Same Day Refrigerator Repair Los Angeles - Fast & Reliable";
           <div class="content__page-hed-h"><h2><strong>Areas We Serve for Refrigerator Repair</strong></h2></div>
           <div class="content__page-desc">
             <p><strong>Same Day Appliance Repair</strong> serves a wide range of areas, offering <strong>in-home refrigerator repair</strong> to ensure your family’s food stays <strong>fresh and safe</strong>. We know that a <strong>working refrigerator</strong> is essential, so we have <strong>technicians across Los Angeles</strong> and nearby areas to provide <strong>same-day service</strong> wherever you are. Whether you’re in <strong>Beverly Hills, Santa Monica, Pasadena, or Glendale</strong>, we’re committed to delivering <strong>professional, reliable service</strong> to get your refrigerator up and running again.</p><p>Our reach goes beyond major cities—we also serve <strong>local neighborhoods and suburbs</strong> like <strong>Culver City, West Hollywood, Burbank,</strong> and <strong>Marina Del Rey</strong>. With <strong>technicians stationed throughout these areas</strong>, we ensure a <strong>fast response</strong> to minimize disruptions to your household. Wherever you are in the <strong>LA area</strong>, we’re ready to bring <strong>high-quality repairs</strong> and excellent <strong>customer service</strong> right to your doorstep.</p>
+          </div>
+          <div class="content__page-desc">
+          <Areas />
           </div>
         </div>
         <Btn />
