--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -188,6 +188,250 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
         </div>
         <Btn />
       </div>
+      <div class="page213-content" id="brands">
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Brands of Washing Machines We Repair</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/whirlpool.webp"
+                  alt="Whirlpool"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lg.webp"
+                  alt="LG"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/samsung.webp"
+                  alt="Samsung"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/GE-general-electric.webp"
+                  alt="General Electric"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="290px"
+                  height="300px"
+                  src="/brand-logos/maytag.webp"
+                  alt="Maytag"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bosch.webp"
+                  alt="Bosch"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kenmore.webp"
+                  alt="Kenmore"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/electrolux.webp"
+                  alt="Electrolux"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/frigidaire.webp"
+                  alt="Frigidaire"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/speed-queen.webp"
+                  alt="Speed Queen"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/amana.webp"
+                  alt="Amana"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+             <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/miele.webp"
+                  alt="Miele"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/blomberg.webp"
+                  alt="Blomberg"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/fisher-paykel.webp"
+                  alt="Fisher & Paykel"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of washing machine we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">Whirlpool</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="#">LG</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">Samsung</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">General Electric</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">Maytag</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">Bosch</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">Kenmore</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">Electrolux</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Frigidaire</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Speed Queen</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Amana</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">Miele</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">Blomberg</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Fisher & Paykel</a></h3>
+            </div>
+
+          </div>
+        </div>
+
+        <Btn />
+      </div>
 
       <div class="page213-content" id="expert-services">
         <div class="content__page-full-hed">
