--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -28,7 +28,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
     <div class="page-header">
       <div class="page-header-d-full">
         <div class="page-header-d">
-          <h1><strong>Same-Day Washing Machine Repair Services in Los Angeles and Surrounding Areas</strong></h1>
+          <span class="animate-charcter"> <h1>Same-Day Washing Machine Repair Services in Los Angeles and Surrounding Areas</h1><span class="animate-charcter">
         </div>
       </div>
 
