--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -451,7 +451,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           </div>
           <div class="content__page-full-desc">
             <div class="content__page-desc">
-              <div class="faq-full" id="faqs-anchor">
+              <div class="faq-full" id="faqs">
                 <div class="FAQ">
                   <div class="fa">
                     <h3>Question</h3>
