--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -11,6 +11,7 @@ import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
+import Areas from "@components/areas.astro";
 
 import "css/service/style_services.css";
 
@@ -28,7 +29,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
     <div class="page-header">
       <div class="page-header-d-full">
         <div class="page-header-d">
-          <h1><strong>Same-Day Dryer Repair Services in Los Angeles and Surrounding Areas</strong></h1>
+          <h1><span class="animate-charcter">Same-Day Dryer Repair Services in Los Angeles and Surrounding Areas</span></h1>
         </div>
       </div>
 
@@ -37,8 +38,8 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
           <img
             width="2000px"
             height="1000px"
-            src="/dryer-repair/dryer-repair-page_header_photos.webp"
-            alt="Dryer Repair Los Angeles"
+            src="/dryer-repair/dryer-page_header_photos.webp"
+            alt="Same Day Dryer repair Los Angeles"
           />
         </div>
         <div class="page-header-f-gradient"></div>
@@ -96,6 +97,15 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
         <div class="content__page-full-hed">
           <div class="content__page-hed-h"><h2><strong>Why Choose Same Day Appliance Repair for Dryer Repair Services?</strong></h2></div>
           <div class="content__page-full-desc">
+            <div class="content__page-desc-phot">
+              <img
+                src="/dryer-repair/dryer-repair-1.webp"
+                loading="lazy"
+                width="400px"
+                height="500px"
+                alt="Microwave Repair"
+              />
+            </div>
             <p>When you select <strong>Same Day Appliance Repair</strong>, you’re opting for expert technicians who can <strong>diagnose</strong> your <strong>dryer issues</strong>...</p>
             <ul>
               <li><p><strong>Same-Day Appointments...</strong></p></li>
@@ -112,6 +122,15 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
         <div class="content__page-full-hed">
           <div class="content__page-hed-h"><h2><strong>Types of Dryers We Repair and Our Specialized Approach</strong></h2></div>
           <div class="content__page-full-desc">
+            <div class="content__page-desc-phot">
+              <img
+                src="/dryer-repair/dryer-repair-2.webp"
+                width="400px"
+                height="500px"
+                alt="Microwave Repair"
+                loading="lazy"
+              />
+            </div>
             <p>With extensive experience across various <strong>dryer types...</strong></p>
             <h3><strong>Electric Dryer Repair</strong></h3>
             <p>Electric <strong>dryers</strong> are reliable...</p>
@@ -130,6 +149,15 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
         <div class="content__page-full-hed">
           <div class="content__page-hed-h"><h2><strong>Common Dryer Problems We Fix</strong></h2></div>
           <div class="content__page-full-desc">
+            <div class="content__page-desc-phot">
+              <img
+                src="/dryer-repair/dryer-repair-6.webp"
+                width="400px"
+                height="500px"
+                alt="Microwave Repair"
+                loading="lazy"
+              />
+            </div>
             <p>With extensive <strong>experience</strong> handling all types of <strong>dryer issues...</strong></p>
             <ul>
               <li><p><strong>Dryer Not Heating Properly...</strong></p></li>
