--- a/src/pages/services/dishwasher-repair-los-angeles.astro
+++ b/src/pages/services/dishwasher-repair-los-angeles.astro
@@ -1,16 +1,16 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Arrow from "@components/js/arrow-phone.astro";
+import Areas from "@components/areas.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
-import ContactForm from "@components/contact-form.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
 
