--- a/src/pages/services/range-hood-repair-los-angeles.astro
+++ b/src/pages/services/range-hood-repair-los-angeles.astro
@@ -395,7 +395,7 @@ import "css/service/style_services.css";
           </div>
 
           <div class="full-desc-logo-brand">
-            <p>Microwave Brands We repair</p>
+            <p>Range Hood Brands We repair</p>
 
             <div class="desc-logo-brand logo-bran-d-1">
               <h3><a href="#">Panasonic</a></h3>
