--- a/src/pages/services/range-hood-repair-los-angeles.astro
+++ b/src/pages/services/range-hood-repair-los-angeles.astro
@@ -20,21 +20,23 @@ import "css/service/style_services.css";
 <Reviews />
  
 <Container>
-  <main style="max-width: 1920px; padding: 0 10%; margin: 0 auto;">
-    <h1>
-      <span class="animate-charcter">Same Day Range Hood Repair</span> Los Angeles
-      and Surrounding Areas
-    </h1>
+  <main>
+    <div class="page-header">
+      <div class="page-header-d-full">
+        <div class="page-header-d">
+          <h1><span class="animate-charcter">Same-Day Range Hood Repair Services in Los Angeles and Nearby Areas</span></h1>
+        </div>
+      </div>
 
-    <div class="two-col-grid">
-      <div class="col-one">
-        <img
-          class="img-header"
-          src="/images/range-hood-repair-los-angeles-and-surrounding-area.webp"
-          width="500"
-          height="500"
-          alt="Range Hood Repair Services Los Angeles - technician repairing an oven"
-        />
+      <div class="page-header-f">
+        <div class="page-header-f-rel">
+          <img
+            class="img-header"
+            src="/images/range-hood-repair-los-angeles-and-surrounding-area.webp"
+            width="500"
+            height="500"
+            alt="Range Hood Repair Services Los Angeles - technician repairing an oven"
+          />
         </div>
         <div class="page-header-f-gradient"></div>
       </div>
