--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -97,6 +97,7 @@ const menuitems = [
       { title: "South Pasadena", path: "/areas/south-pasadena/"},
       { title: "Thousand Oaks", path: "/areas/thousand-oaks/"},
       { title: "West Hollywood", path: "/areas/west-hollywood/"},  
+      { title: "West Hollywood", path: "/areas/test/"},
       
     ],
   },
